# refinco

./: .gitignore  README.md  branche.ipynb  companies.xlsx  company_query_compare.py  enhance_missing_contacts.py  enhance_wealth_managers.py  enhence_info_with_page.py  enhence_phone.py  kontaktperson.ipynb  main.py  pyproject.toml  requirements.txt  spec.md  task.md
data/: disfold_japan_companies.html  disfold_japan_companies_top50.csv  wealth_managers_combined_20250818_001939.csv  wealth_managers_combined_20250818_003634.csv  wealth_managers_contacts.xlsx  wealth_managers_enhanced.csv  wealth_managers_enhanced.xlsx  wealth_managers_europe.xlsx  wealth_managers_europe_20250813_074141.xlsx  wealth_managers_europe_20250817_200727.csv  wealth_managers_europe_20250817_200727.xlsx  wealth_managers_top10_20250813_071851.xlsx
docs/: 11.08.md  20.08.md  python-imports-and-env.md
notebooks/: notebook.ipynb  wealth_manager.ipynb
output/: analyse.ipynb  wealth_managers_combined_20250818_003634.xlsx  wealth_managers_enhanced.csv  wealth_managers_enhanced.xlsx  wealth_managers_enhanced_contacts_20250825_170323.xlsx  wealth_managers_enhanced_contacts_20250826_022622.xlsx  wealth_managers_enhanced_with_urls.xlsx
tests/: test_openai_llm_connectivity.py  test_perplexity_llm_connectivity.py
utils/: __init__.py  crawl.py  csv2excel.py  enhance_info_with_perplexity.py  find_contact_info.py  get_company_list_from_swfinstitute.py  google_search_api.py  llm.py  llm_api.py  openai_llm.py  perplexity_llm.py  swf_profile_scraper.py  utils.py
(+1 files in other folders)
